email type + placeholder

--- a/test.html
+++ b/test.html
@@ -36,7 +36,14 @@
                 {
                     type: 'text',
                     name: 'string1',
-                    label: 'Texto 1'
+                    label: 'Text 1',
+                    placeholder: 'Text placeholder'
+                },
+                {
+                    type: 'email',
+                    name: 'email',
+                    label: 'Email',
+                    placeholder: 'super@email.com'
                 }
             ]
         }
