--- a/test.html
+++ b/test.html
@@ -44,6 +44,13 @@
                     name: 'email',
                     label: 'Email',
                     placeholder: 'super@email.com'
+                },
+                {
+                    type: 'textarea',
+                    name: 'textarea',
+                    label: 'Text area',
+                    rows: 3,
+                    placeholder: 'Row1\nRow2\nRow3\n'
                 }
             ]
         }
