--- a/test.html
+++ b/test.html
@@ -34,18 +34,21 @@
         const formOptions = {
             fields: [
                 {
+                    attributes: [],
                     type: 'text',
                     name: 'string1',
                     label: 'Text 1',
                     placeholder: 'Text placeholder'
                 },
                 {
+                    attributes: [{type:'col', value:6}],
                     type: 'email',
                     name: 'email',
                     label: 'Email',
                     placeholder: 'super@email.com'
                 },
                 {
+                    attributes: [],
                     type: 'textarea',
                     name: 'textarea',
                     label: 'Text area',
