package.json + gitignore

--- a/test.html
+++ b/test.html
@@ -41,7 +41,7 @@
                     placeholder: 'Text placeholder'
                 },
                 {
-                    attributes: [{type:'col', value:6}],
+                    attributes: [{type:'col', value:6}, {type:'pepe', value:1000}],
                     type: 'email',
                     name: 'email',
                     label: 'Email',
