--- a/test.html
+++ b/test.html
@@ -28,7 +28,9 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" crossorigin="anonymous"></script>
     
     <!-- Crud Lib -->
-    <script src="crud.js"></script>
+    <!-- <script type="module" src="src/crud.js"></script> -->
+    <script> var exports = {}; </script>
+    <script src="src/crud.js"></script>
     
     <script>
         const formOptions = {
