generic/dynamic attrs

--- a/test.html
+++ b/test.html
@@ -37,20 +37,26 @@
                     type: 'text',
                     name: 'string1',
                     label: 'Text 1',
-                    placeholder: 'Text placeholder'
+                    attr: {
+                        placeholder: 'Text placeholder'
+                    }                    
                 },
                 {
                     type: 'email',
                     name: 'email',
                     label: 'Email',
-                    placeholder: 'super@email.com'
+                    attr: {
+                        placeholder: 'super@email.com'
+                    }
                 },
                 {
                     type: 'textarea',
                     name: 'textarea',
                     label: 'Text area',
-                    rows: 3,
-                    placeholder: 'Row1\nRow2\nRow3\n'
+                    attr: {
+                        placeholder: 'Row1\nRow2\nRow3\n',
+                        rows: 3
+                    }
                 }
             ]
         }
