--- a/test.html
+++ b/test.html
@@ -33,6 +33,8 @@
     <script>
         const formOptions = {
             size: '', // sm / lg / (empty)
+            submitUrl: '',
+            dataUrl: '',
             fields: [
                 {
                     type: 'text',
