demo server + load options ajax

--- a/demo/index.html
+++ b/demo/index.html
@@ -65,6 +65,9 @@
             ]
         }
         CrudJS.BuildForm('crud-form', formOptions);
+
+        // Load ajax
+        //CrudJS.BuildForm('crud-form', 'form-options.json');
     </script>
 </body>
 
