demo ajax & static

--- a/demo/ajax.html
+++ b/demo/ajax.html
@@ -31,43 +31,8 @@
     <script src="crud.js"></script>
     
     <script>
-        const formOptions = {
-            size: '', // sm / lg / (empty)
-            submitUrl: '',
-            dataUrl: '',
-            fields: [
-                {
-                    type: 'text',
-                    name: 'string1',
-                    label: 'Text 1',
-                    description: 'Description text here.',
-                    attr: {
-                        placeholder: 'Text placeholder'
-                    }
-                },
-                {
-                    type: 'email',
-                    name: 'email',
-                    label: 'Email',
-                    attr: {
-                        placeholder: 'super@email.com'
-                    }
-                },
-                {
-                    type: 'textarea',
-                    name: 'textarea',
-                    label: 'Text area',
-                    attr: {
-                        placeholder: 'Row1\nRow2\nRow3\n',
-                        rows: 3
-                    }
-                }
-            ]
-        }
-        CrudJS.BuildForm('crud-form', formOptions);
-
         // Load ajax
-        //CrudJS.BuildForm('crud-form', 'form-options.json');
+        CrudJS.BuildForm('crud-form', 'form-options.json');
     </script>
 </body>
 
